[package]
name = "fortress"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_egui = { version = "0.32.0", features = ["immutable_ctx"] }
egui-notify = "0.18.0"
image = "0.25.5"
rand = "0.8.5"
winit = "0.30.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
